add_executable(solutions solutions.cpp)
add_executable(l434 l434.cpp)
add_executable(l91 l91.cpp)
add_executable(l503 l503.cpp)
add_executable(l451 l451.cpp)
add_executable(l215 l215.cpp)
add_executable(l150 l150.cpp)
add_executable(l373 l373.cpp)
add_executable(l402 l402.cpp)
add_executable(l224 l224.cpp)