add_executable(solutions solutions.cpp)
add_executable(l434 l434.cpp)
add_executable(l91 l91.cpp)
add_executable(l503 l503.cpp)
add_executable(l451 l451.cpp)
add_executable(l215 l215.cpp)
add_executable(l150 l150.cpp)
add_executable(l373 l373.cpp)
add_executable(l402 l402.cpp)
add_executable(l224 l224.cpp)
add_executable(l202 l202.cpp)
add_executable(l263 l263.cpp)
add_executable(l264 l264.cpp)
add_executable(l313 l313.cpp)
add_executable(l166 l166.cpp)
add_executable(l483 l483.cpp)
add_executable(l278 l278.cpp)
add_executable(l74 l74.cpp)
add_executable(l240 l240.cpp)
add_executable(l154 l154.cpp)
add_executable(l162 l162.cpp)
add_executable(l174 l174.cpp)
add_executable(l131 l131.cpp)
add_executable(l78 l78.cpp)
add_executable(l89 l89.cpp)
add_executable(l79 l79.cpp)
add_executable(l47 l47.cpp)
add_executable(l140 l140.cpp)
add_executable(l122 l122.cpp)
add_executable(l452 l452.cpp)
add_executable(l455 l455.cpp)
add_executable(l406 l406.cpp)
add_executable(l134 l134.cpp)
add_executable(l435 l435.cpp)
add_executable(l321 l321.cpp)
add_executable(l349 l349.cpp)
add_executable(l56 l56.cpp)
add_executable(l179 l179.cpp)
