include_directories(../../common_lib)
add_executable(coursera coursera.cpp)
add_executable(reachability reachability.cpp)
add_executable(acyclicity acyclicity.cpp)
add_executable(topsort topsort.cpp)
add_executable(strong_connected strong_connected.cpp)
add_executable(bfs bfs.cpp)
add_executable(bipartite bipartite.cpp)
add_executable(dijsktra dijsktra.cpp)
add_executable(negative_cycle negative_cycle.cpp)
add_executable(shortest_paths shortest_paths.cpp)